# linebreak-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/gavinliu/android/lib/linebreak/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/gavinliu/android/lib/linebreak/demo/: FirstFragment.kt  MainActivity.kt  ResultAdapter.kt  SecondFragment.kt
app/src/main/res/drawable/: bg_text.xml
app/src/main/res/layout/: activity_main.xml  item_result.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/gavinliu/android/lib/linebreak/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
linebreak/: build.gradle
linebreak/src/androidTest/java/cn/gavinliu/android/lib/linebreak/: ExampleInstrumentedTest.kt
linebreak/src/main/cpp/: CMakeLists.txt  LineBreaker.cpp  linebreak.c
linebreak/src/main/cpp/libunibreak/: linebreak.c  linebreakdef.c
linebreak/src/main/java/cn/gavinliu/android/lib/linebreak/: LineBreaker.kt  NativeLib.kt
linebreak/src/main/java/cn/gavinliu/android/lib/linebreak/ktx/: StringKt.kt
linebreak/src/test/java/cn/gavinliu/android/lib/linebreak/: ExampleUnitTest.kt
